force-app/main/default/objects/Account/fields/Document_ID__c.field-meta.xml
<CustomField>
    <fullName>Document_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Document ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>