force-app/main/default/objects/Account/fields/Final_Application_Status__c.field-meta.xml
<CustomField>
    <fullName>Final_Application_Status__c</fullName>
    <description>VHF-1180</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Final Application Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>