force-app/main/default/objects/Account/fields/Logo__c.field-meta.xml
<CustomField>
    <fullName>Logo__c</fullName>
    <formula>IF( ISBLANK(Document_ID__c) , &quot;Logo not uploaded&quot;, IMAGE( $Setup.BaseURL__c.My_Domain_URL__c + &quot;/servlet/servlet.FileDownload?file=&quot;+ Document_ID__c , &apos;Logo&apos;,100,100))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Logo</label>
    <type>Text</type>
</CustomField>