force-app/main/default/objects/Account/fields/Panel_Finance_Officer__c.field-meta.xml
<CustomField>
    <fullName>Panel_Finance_Officer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>VHF-3105</description>
    <label>Panel Finance Officer</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (Contact)</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>