force-app/main/default/objects/Account/fields/PersonAlias__c.field-meta.xml
<CustomField>
    <fullName>PersonAlias__c</fullName>
    <formula>MID( (TRIM(LEFT(FirstName,4) + RIGHT(LastName,4) + TEXT(TODAY()))),2,8 )</formula>
    <label>PersonAlias</label>
    <type>Text</type>
</CustomField>