force-app/main/default/objects/Account/fields/Shared_Mailbox__c.field-meta.xml
<CustomField>
    <fullName>Shared_Mailbox__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>VHF-3045 requirements - used to set recipient for email communications with Panel Financiers</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Shared Mailbox</label>
    <type>Email</type>
    <unique>true</unique>
</CustomField>