force-app/main/default/objects/Account/fields/vlocity_ins__PremiumYear__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__PremiumYear__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Premium Year</label>
    <length>10</length>
    <type>Text</type>
</CustomField>