force-app/main/default/objects/Account/fields/vlocity_ins__ProviderIdentifier__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__ProviderIdentifier__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Provider Identifier</label>
    <length>80</length>
    <type>Text</type>
</CustomField>