force-app/main/default/objects/Account/fields/vlocity_ins__SLAExpirationDate__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__SLAExpirationDate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>SLA Expiration Date</label>
    <type>Date</type>
</CustomField>