force-app/main/default/objects/Account/fields/vlocity_ins__TerminationReason__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__TerminationReason__c</fullName>
    <description>Termination reason for accounts which have been terminated or deactivated. For example in health insurance a group division account may be terminated from claims processing.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Termination Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>