force-app/main/default/objects/Account/recordTypes/Business.recordType-meta.xml
<RecordType>
    <fullName>Business</fullName>
    <active>true</active>
    <description>Financial Planner or Lender</description>
    <label>Business</label>
</RecordType>