force-app/main/default/objects/Account/recordTypes/vlocity_ins__Group.recordType-meta.xml
<RecordType>
    <fullName>vlocity_ins__Group</fullName>
    <active>false</active>
    <label>Group</label>
</RecordType>