force-app/main/default/objects/Account/recordTypes/vlocity_ins__GroupDivision.recordType-meta.xml
<RecordType>
    <fullName>vlocity_ins__GroupDivision</fullName>
    <active>false</active>
    <label>Group Division</label>
</RecordType>