force-app/main/default/objects/Account/recordTypes/vlocity_ins__MobilePhoneAccount.recordType-meta.xml
<RecordType>
    <fullName>vlocity_ins__MobilePhoneAccount</fullName>
    <active>false</active>
    <label>MobilePhoneAccount</label>
</RecordType>