force-app/main/default/objects/Account/validationRules/A_Work_Home_Or_Mobile_Phone_Require.validationRule-meta.xml
<ValidationRule>
    <fullName>A_Work_Home_Or_Mobile_Phone_Require</fullName>
    <active>true</active>
    <description>User must enter one of the 3 phone numbers.</description>
    <errorConditionFormula>AND (ISBLANK(PersonHomePhone), ISBLANK(PersonMobilePhone), ISBLANK(Phone), $Profile.Name = &apos;Operations&apos;, RecordType.DeveloperName &lt;&gt; &apos;Business&apos;)</errorConditionFormula>
    <errorMessage>Enter at least one contact number.</errorMessage>
</ValidationRule>