force-app/main/default/objects/Account/validationRules/Home_Phone_Pattern_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Home_Phone_Pattern_Check</fullName>
    <active>true</active>
    <description>The home phone number must be numeric with &apos;+&apos; allowed  and must be 10-12 digits</description>
    <errorConditionFormula>AND (
NOT(ISBLANK( PersonHomePhone )),
AND( $Profile.Name = &apos;Operations&apos;),
AND(
NOT(REGEX( SUBSTITUTE(PersonHomePhone ,&apos; &apos;, &apos;&apos;) , &quot;\\+{0,1}[0-9]{10,12}&quot;))
)
)</errorConditionFormula>
    <errorDisplayField>PersonHomePhone</errorDisplayField>
    <errorMessage>Please enter a valid home phone number.</errorMessage>
</ValidationRule>