force-app/main/default/objects/Account/validationRules/Mobile_Number_Pattern_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Mobile_Number_Pattern_Check</fullName>
    <active>true</active>
    <description>The mobile number must be numeric with &apos;+&apos; allowed  and must be 10-12 digits</description>
    <errorConditionFormula>AND (
NOT(ISBLANK(PersonMobilePhone)),
AND( $Profile.Name = &apos;Operations&apos;),
AND(
NOT(REGEX( SUBSTITUTE(PersonMobilePhone,&apos; &apos;, &apos;&apos;) , &quot;\\+{0,1}[0-9]{10,12}&quot;))
)
)</errorConditionFormula>
    <errorDisplayField>PersonMobilePhone</errorDisplayField>
    <errorMessage>Please enter a valid mobile number.</errorMessage>
</ValidationRule>