force-app/main/default/objects/Account/validationRules/Participant_cannot_be_reactivated.validationRule-meta.xml
<ValidationRule>
    <fullName>Participant_cannot_be_reactivated</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(PRIORVALUE(IsActiveApplicant__pc), &quot;No&quot;) &amp;&amp; ( ISPICKVAL(IsActiveApplicant__pc, &quot;Yes&quot;) ||  Is_Participant__pc =true)</errorConditionFormula>
    <errorMessage>You can&apos;t activate an Inactive Participant</errorMessage>
</ValidationRule>