force-app/main/default/objects/Account/validationRules/Postal_Code_to_allow_only_Digits.validationRule-meta.xml
<ValidationRule>
    <fullName>Postal_Code_to_allow_only_Digits</fullName>
    <active>true</active>
    <errorConditionFormula>!REGEX(PersonMailingPostalCode,&quot;^[0-9]{4}&quot;) &amp;&amp; $RecordType.Name = &quot;Person Account&quot;</errorConditionFormula>
    <errorMessage>Please enter a valid Postal Code.</errorMessage>
</ValidationRule>