force-app/main/default/objects/Account/validationRules/Restriction_On_Mailing_City_Field.validationRule-meta.xml
<ValidationRule>
    <fullName>Restriction_On_Mailing_City_Field</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(PersonMailingCity)&amp;&amp; $RecordType.Name = &quot;Person Account&quot;</errorConditionFormula>
    <errorDisplayField>PersonMailingCity</errorDisplayField>
    <errorMessage>Please provide the Mailing City</errorMessage>
</ValidationRule>