force-app/main/default/objects/Account/validationRules/Restriction_On_Mailing_Postal_Code_Field.validationRule-meta.xml
<ValidationRule>
    <fullName>Restriction_On_Mailing_Postal_Code_Field</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(PersonMailingPostalCode)&amp;&amp; $RecordType.Name = &quot;Person Account&quot;</errorConditionFormula>
    <errorDisplayField>PersonMailingPostalCode</errorDisplayField>
    <errorMessage>Please provide the Mailing Zip/Postal Code</errorMessage>
</ValidationRule>