force-app/main/default/objects/Account/validationRules/Restriction_On_Mailing_State_Field.validationRule-meta.xml
<ValidationRule>
    <fullName>Restriction_On_Mailing_State_Field</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK( PersonMailingState)&amp;&amp; $RecordType.Name = &quot;Person Account&quot;</errorConditionFormula>
    <errorDisplayField>PersonMailingState</errorDisplayField>
    <errorMessage>Please select the Mailing State/Province</errorMessage>
</ValidationRule>