force-app/main/default/objects/Account/validationRules/Restriction_On_Mailing_Street_Field.validationRule-meta.xml
<ValidationRule>
    <fullName>Restriction_On_Mailing_Street_Field</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(PersonMailingStreet)&amp;&amp; $RecordType.Name = &quot;Person Account&quot;</errorConditionFormula>
    <errorDisplayField>PersonMailingStreet</errorDisplayField>
    <errorMessage>Please provide the Mailing Street</errorMessage>
</ValidationRule>