force-app/main/default/objects/Account/validationRules/Work_Phone_Pattern_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Work_Phone_Pattern_Check</fullName>
    <active>true</active>
    <description>The work phone number must be numeric with &apos;+&apos; allowed  and must be 10-12 digits</description>
    <errorConditionFormula>AND (
NOT(ISBLANK(  PersonOtherPhone )),
AND( $Profile.Name = &apos;Operations&apos;),
AND(
NOT(REGEX( SUBSTITUTE(PersonOtherPhone ,&apos; &apos;, &apos;&apos;) , &quot;\\+{0,1}[0-9]{10,12}&quot;))
)
)</errorConditionFormula>
    <errorDisplayField>PersonOtherPhone</errorDisplayField>
    <errorMessage>Please enter a valid work phone number.</errorMessage>
</ValidationRule>