force-app/main/default/objects/Account/listViews/vlocity_ins__Agency.listView-meta.xml
<ListView>
    <fullName>vlocity_ins__Agency</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>vlocity_ins__AgencyBrokerageNumber__c</columns>
    <columns>vlocity_ins__NPNNumber__c</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>vlocity_ins__NumberofProducers__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Business</value>
    </filters>
    <label>Agency/Brokerages</label>
</ListView>